fix logout, layout spacing

--- a/src/components/navBar/style.css
+++ b/src/components/navBar/style.css
@@ -3,7 +3,7 @@ nav {
   align-items: center;
   justify-content: center;
   position: relative;
-  height: 80px;
+  height: 50px;
 }
 
 nav h1{
